--- a/src/App.css
+++ b/src/App.css
@@ -67,12 +67,6 @@ input[type="radio"] {
   transition: color 0.15s ease-in;
 }
 
-input[id="radio-1"]:checked + label,
-input[id="radio-2"]:checked + label,
-input[id="radio-3"]:checked + label {
-  color: black;
-}
-
 input[id=radio-1]:checked ~ .glider {
   transform: translateX(0);
 }
@@ -83,10 +77,50 @@ input[id=radio-3]:checked ~ .glider {
   transform: translateX(200%);
 }
 
+input[id=male]:checked ~ .glider {
+  transform: translateX(0);
+}
+input[id=female]:checked ~ .glider {
+  transform: translateX(100%);
+}
+input[id=all]:checked ~ .glider {
+  transform: translateX(200%);
+}
+
+input[id=small]:checked ~ .glider {
+  transform: translateX(0);
+}
+input[id=middle]:checked ~ .glider {
+  transform: translateX(100%);
+}
+input[id=big]:checked ~ .glider {
+  transform: translateX(200%);
+}
+
+input[id=yes]:checked ~ .glider2 {
+  transform: translateX(0);
+}
+input[id=no]:checked ~ .glider2 {
+  transform: translateX(100%);
+}
+
 .glider {
   position: absolute;
   height: 100%; /* 글라이더의 높이 */
   width: 33.3%; /* 글라이더의 너비 */
+  background-color: white; /* 흰색 배경 */
+  border: 2px solid #cccccc; /* 회색 테두리 */
+  z-index: 1;
+  top: 0%;
+  left: 0%;
+  border-radius: 20px; /* 라운드 테두리 */
+  transition: transform 0.25s ease-out;
+}
+
+.glider2 {
+  position: absolute;
+  height: 100%; /* 글라이더의 높이 */
+  width: 50%; /* 글라이더의 너비 */
   background-color: white; /* 흰색 배경 */
   border: 2px solid #cccccc; /* 회색 테두리 */
   z-index: 1;
