--- a/src/components/layout/NavBar.css
+++ b/src/components/layout/NavBar.css
@@ -1,34 +1,107 @@
-nav {
-    display: flex; 
-    align-items: center; 
-    padding: 10px 20px; 
-    background-color: #f8f8f8; 
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+/* NavBar.css */
+.navbar-custom {
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #f8f8f8;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-logo {
+  margin-right: 30px;
+}
+
+.navbar-menu {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0; 
+  justify-content: space-between;
+  flex-grow: 1; 
+}
+
+.navbar-item a {
+  text-decoration: none; 
+  color: black; 
+  font-size: 18px; 
+  transition: color 0.3s;
+}
+
+.navbar-item:last-child {
+  margin-right: 20px; 
+}
+
+.navbar-item a:hover {
+  color: #007bff; 
+}
+
+#ListTask {
+  width: 120px;  
+  height: 60px; 
+}
+
+
+@media (max-width: 480px) {
+  /* 스마트폰 세로 */
+  .navbar-item {
+    margin: 0 5px; 
   }
-  
-  img {
-    margin-right: 30px; 
+
+  .navbar-item a {
+    font-size: 16px; 
   }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    margin: 0; 
-    display: flex; 
+
+  #ListTask {
+    width: 100px;  
+    height: 50px;  
+}
+}
+
+@media (min-width: 481px) and (max-width: 768px) {
+  /* 스마트폰 가로 및 태블릿 */
+  .navbar-item {
+    margin: 0 10px; 
   }
-  
-  li {
-    margin: 0 90px; 
+
+  .navbar-item a {
+    font-size: 17px; 
   }
-  
-  li a {
-    text-decoration: none; 
-    color: black; 
+
+  #ListTask {
+    width: 110px;  
+    height: 55px;  
+}
+}
+
+@media (min-width: 769px) and (max-width: 1279px) {
+  /* 태블릿 가로 및 노트북 */
+  .navbar-item {
+    margin: 0 20px; 
+  }
+
+  .navbar-item a {
     font-size: 18px; 
-    transition: color 0.3s;
   }
-  
-  li a:hover {
-    color: #007bff; 
+
+  #ListTask {
+    width: 120px;  
+    height: 60px;  
+}
+}
+
+@media (min-width: 1280px) {
+  /* 데스크탑 */
+  .navbar-item {
+    margin: 0 30px; 
   }
-  
+
+  .navbar-item a {
+    font-size: 18px; 
+  }
+
+  #ListTask {
+    width: 140px;  
+    height: 70px; 
+}
+}
+
