--- a/src/components/ui/modal/Modal.css
+++ b/src/components/ui/modal/Modal.css
@@ -113,3 +113,15 @@
     border-radius: 20px; /* 라운드 테두리 */
     transition: transform 0.25s ease-out;
   }
+
+  .left-panel {
+    width: 300px; /* 원하는 너비로 설정 */
+    overflow-y: auto; /* 스크롤 가능하게 설정 */
+    height: 100%; /* 전체 높이 사용 */
+  }
+
+  .right-panel {
+    padding: 20px;
+    border-left: 2px solid #ccc; /* 선 스타일 설정 */
+  }
+
