--- a/src/components/ui/card/Card.css
+++ b/src/components/ui/card/Card.css
@@ -14,3 +14,12 @@
     border-color: #f08080;
     color: black;
 }
+
+.exit-btn {
+    background-color: #f08080;
+    border-radius: 0px;
+    border-bottom-right-radius: 13px;
+    border-bottom-left-radius: 13px;
+    border-color: #f08080;
+    color: black;
+}
