--- a/src/components/ui/modal/Modal.css
+++ b/src/components/ui/modal/Modal.css
@@ -28,14 +28,17 @@
     transition: color 0.15s ease-in;
   }
   
-  input[id=radio-1]:checked ~ .glider {
+  input[id=radio-1]:checked ~ .glider3 {
     transform: translateX(0);
   }
-  input[id=radio-2]:checked ~ .glider {
+  input[id=radio-2]:checked ~ .glider3 {
     transform: translateX(100%);
   }
-  input[id=radio-3]:checked ~ .glider {
+  input[id=radio-3]:checked ~ .glider3 {
     transform: translateX(200%);
+  }
+  input[id=radio-4]:checked ~ .glider3 {
+    transform: translateX(300%);
   }
   
   input[id=male]:checked ~ .glider {
@@ -113,11 +116,25 @@
     border-radius: 20px; /* 라운드 테두리 */
     transition: transform 0.25s ease-out;
   }
+  .glider3 {
+    position: absolute;
+    height: 100%; /* 글라이더의 높이 */
+    width: 25%; /* 글라이더의 너비 */
+    background-color: white; /* 흰색 배경 */
+    border: 2px solid #cccccc; /* 회색 테두리 */
+    z-index: 1;
+    top: 0%;
+    left: 0%;
+    border-radius: 20px; /* 라운드 테두리 */
+    transition: transform 0.25s ease-out;
+  }
 
   .left-panel {
-    width: 300px; /* 원하는 너비로 설정 */
+    flex: 1; /* flex-grow를 사용하여 패널이 가변적으로 크기를 조정 */
+    min-width: 220px; /* 최소 너비 설정 */
     overflow-y: auto; /* 스크롤 가능하게 설정 */
-    height: 100%; /* 전체 높이 사용 */
+    display: flex; /* flex 컨테이너로 설정 */
+    flex-direction: column; /* 세로 방향으로 flex 설정 */
   }
 
   .right-panel {
