feat: 종목 선택으로 인한 필터링 추가

--- a/src/components/ui/crew/card/MemberCard.css
+++ b/src/components/ui/crew/card/MemberCard.css
@@ -23,7 +23,7 @@
     width: 140px;
     height: 140px;
     border-radius: 50%;
-    border: 7px solid #fff;
+    border: 7px solid #8e8e8e;
     margin-top: -80px;
 }
 
