--- a/src/pages/community/communityComponent/CategoryDropdown.css
+++ b/src/pages/community/communityComponent/CategoryDropdown.css
@@ -1,13 +1,14 @@
+
 .filter-section {
   border: 1px solid #e0e0e0;
-  max-width: 1200px;  /* 최대 너비 설정 */
-  margin: 0 auto;     /* 중앙 정렬 */
+  max-width: 800px;  
+  margin: 0 auto;    
   width: 95%;   
 }
 
 .section-headers {
   display: flex;
-  background-color: #666666;
+  background-color: #1d2636;
   position: relative;
 }
 
@@ -44,19 +45,19 @@
   display: flex;
   padding: 20px;
   gap: 20px;
-  max-height: 300px; /* 최대 높이 설정 */
+  max-height: 300px;
 }
 
 .category-section {
   flex: 1;
-  overflow-y: auto; /* 내용이 넘칠 경우 스크롤 표시 */
+  overflow-y: auto; 
 }
 
 .category-list {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  max-height: 100%; /* 부모 높이에 맞춤 */
+  max-height: 100%;
 }
 
 .category-item {
