--- a/src/pages/community/communityComponent/CategoryDropdown.css
+++ b/src/pages/community/communityComponent/CategoryDropdown.css
@@ -1,9 +1,9 @@
-
 .filter-section {
   border: 1px solid #e0e0e0;
   max-width: 800px;  
   margin: 0 auto;    
   width: 95%;   
+  overflow: hidden;
 }
 
 .section-headers {
@@ -46,6 +46,7 @@
   padding: 20px;
   gap: 20px;
   max-height: 300px;
+  transition: max-height 0.3s ease;
 }
 
 .category-section {
