--- a/src/pages/community/communityComponent/SearchBar.css
+++ b/src/pages/community/communityComponent/SearchBar.css
@@ -1,10 +1,7 @@
 .search-bar {
-    display: flex;
-    gap: 10px;
-    width: 400px;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
+  display: flex;
+  gap: 10px;
+  width: 400px;
   }
   
   .search-bar input {
@@ -13,4 +10,16 @@
   
   .search-bar button {
     white-space: nowrap;
-  }
+    background-color: #333C4D;
+    color: #fff;
+    border: none;
+    padding: 10px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.search-bar button:hover {
+    background-color: #414d60;
+    color: #e0e0e0;
+}
