--- a/src/pages/badge/badgeModalComponents/BadgeModal.css
+++ b/src/pages/badge/badgeModalComponents/BadgeModal.css
@@ -7,18 +7,22 @@
   background: rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  padding-top: 60px;
   z-index: 1000;
 }
 
 .modal-content {
   background: white;
+  margin-top: 10%;
   padding: 20px;
   border-radius: 8px;
   position: relative;
   width: 400px;
   max-width: 90%;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+  max-height: 80%;
+  overflow-y: auto;
 }
 
 .modal-close-button {
@@ -55,6 +59,12 @@
   margin-top: 20px;
 }
 
+.modal-body-scrollable {
+  max-height: 400px;
+  overflow-y: auto;
+  padding-right: 10px;
+}
+
 .score-section {
   display: flex;
   justify-content: space-around;
@@ -73,6 +83,7 @@
   text-align: center;
   margin: 0 10px;
 }
+
 .stats-footer-container {
   background-color: #f0f0f0;
   border-radius: 8px;
