--- a/src/pages/community/CommunityPage.css
+++ b/src/pages/community/CommunityPage.css
@@ -27,10 +27,66 @@
   margin-top: 50px;
   margin-bottom: 50px;
   padding: 0 20px;
+  gap: 20px;
 }
 
 .write-button {
-  position: absolute;
-  right: 20px;
-  min-width: 100px;
+  min-width: 70px;
+  background-color: #1d2636;
+  color: #fff;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.write-button:hover {
+  background-color: #414d60;
+  color: #e0e0e0;
+}
+
+.recommended-title {
+  font-size: 40px;
+  font-weight: 900;
+  color: #1a1a1a;
+  margin: 20px auto 20px auto;
+  width: 95%;  /* PostItem과 동일한 너비 */
+  max-width: 1200px;  /* PostItem과 동일한 최대 너비 */
+}
+
+.top{
+  position:relative;
+  width: 100%;
+  height: 100px;
+
+}
+
+.topbackground{
+  position:absolute;
+  top: -20px;
+  width: 100%;
+  height: 200px;
+  background-color: #b6c0d3;
+  z-index: -5;
+
+
+}
+
+.top_title{
+  margin:0 auto;
+  padding-top: 30px;
+  width: 1200px;
+  height: 20px;
+  font-weight: bold;
+
+}
+
+
+/* 반응형 대응 */
+@media screen and (max-width: 768px) {
+  .recommended-title {
+    font-size: 32px;
+    margin: 15px auto;
+  }
 }
