--- a/src/pages/crew/CrewPage.css
+++ b/src/pages/crew/CrewPage.css
@@ -9,5 +9,9 @@
 .nav-pills .nav-item {
     margin-right: 5px;
     margin-left: 0px;
+    
 }
 
+.nav-pills .nav-item .nav-link.active {
+    background: #1D2636;
+}
