--- a/src/pages/crew/Crew.css
+++ b/src/pages/crew/Crew.css
@@ -1,8 +1,8 @@
 .nav-tabs .nav-link.active {
     background-color: #1D2636 !important;
-    border-left: 2px solid #251316;
-    border-top: 2px solid #251316;
-    border-right: 2px solid #251316;
+    border-left: 2px solid #1D2636;
+    border-top: 2px solid #1D2636;
+    border-right: 2px solid #1D2636;
     border-bottom: none;
     color: #fff !important; /* 텍스트 색상 변경 */
 }
