--- a/src/pages/community/CommunityPage.css
+++ b/src/pages/community/CommunityPage.css
@@ -2,6 +2,12 @@
   padding: 20px;
 }
 
+body{
+  
+  font-family: var( --font-HakgyoansimWoojuR );
+}
+
+
 .tab-container {
   margin-bottom: 20px;
 }
