fix: 게시물 작성&수정&상세 수정,

--- a/src/pages/community/CommunityPage.css
+++ b/src/pages/community/CommunityPage.css
@@ -2,6 +2,10 @@
   padding: 20px;
 }
 
+.community-container.content-view {
+  background-color: #b6c0d3;
+}
+
 body{
   
   font-family: var(  --font-ONE-Mobile-Title );
